@@ -1,3 +1,8 @@
+2012-07-09 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added News - sdcc 3.2.0 release,
+	  fixed bug #3537876 - types doc
+
 2012-07-07 Borut Razem <borut.razem AT siol.net>
 
 	* index.php, previous.php: added News - sdcc 3.2.0 RC4
